CHANGES in VERSION 1.9.5

* add a section in the vignette to show how to adjust positions
  of column names when there are bottom annotations.
* fixed a bug that character NA values can not to assigned with na_col
* extra character 'at' and 'labels' in legends will be removed automatically

=============================

CHANGES in VERSION 1.9.4

* heatmap bodied can be set as raster images if number of rows are too huge

==============================

CHANGES in VERSION 1.9.3

* graphic parameters are correctly recycled in row annotations
* if there is only one row after splitting, there will be no dendrogram
* add `range` option in `densityHeatmap()`
* when `gap` is set for the main heatmap, other heatmps also adjust their `gap` values to it
* fixed a bug that when rownames/colnames are not complete, dendrograms are corrupted
* `alter_fun` now supports adding graphics grid by grid
* add `show_pct` option in `oncoPrint()`
* add `column_order` in `densityHeatmap()`

==============================

CHANGES in VERSION 1.9.2

* imporved example of `anno_link()`

==============================

CHANGES in VERSION 1.9.1

* width of the heatmap body are calculated correctly if it is set as a fixed unit
* there is no dendrogram is nrows in a row-slice is 1
* add `anno_link()` annotation function
* bottom annotations are attached to the bottom edge of the heatmap 
  if there are additional blank space
* colors for NA can be set by "_NA_" in annotations
* `row_dend_reorder` and `column_dend_reorder` are set to `TRUE` by default again -_-!!
* optimize the way to specify na_col in heatmap annotations
* correct wrong viewport names in decorate_* functions

===============================

CHANGES in VERSION 1.7.3

* `oncoPrint()`: add `barplot_ignore` option to remove alterations
  that are not put on the barplot.
* `oncoPrint()`: delete extra alter_fun if they are not in the matrix

================================

CHANGES in VERSION 1.7.2
