@@ -1,114 +1,114 @@
-export(column_anno_histogram)
-export(anno_boxplot)
-exportMethods(column_order)
+export('+.AdditiveUnit')
+export(AdditiveUnit)
 export(ColorMapping)
-export(HeatmapAnnotation)
-export(column_anno_boxplot)
-export(selectArea)
-export(row_anno_barplot)
 export(Heatmap)
-export(row_anno_points)
-export(column_anno_text)
-export(decorate_row_dend)
-export(decorate_column_dend)
-exportMethods(draw)
-export(unify_mat_list)
-exportMethods(draw_heatmap_body)
-exportMethods(color_mapping_legend)
-exportMethods(prepare)
-export(decorate_annotation)
-exportMethods(map_to_colors)
-export(decorate_dimnames)
-export(column_anno_points)
-exportMethods(component_height)
-export(row_anno_text)
-exportClasses(SingleAnnotation)
+export(HeatmapAnnotation)
+export(HeatmapList)
 export(SingleAnnotation)
+export(anno_barplot)
+export(anno_boxplot)
+export(anno_density)
+export(anno_histogram)
+export(anno_link)
+export(anno_points)
+export(anno_text)
+export(columnAnnotation)
+export(column_anno_barplot)
+export(column_anno_boxplot)
+export(column_anno_density)
+export(column_anno_histogram)
+export(column_anno_link)
+export(column_anno_points)
+export(column_anno_text)
+export(decorate_annotation)
+export(decorate_column_dend)
+export(decorate_column_names)
+export(decorate_column_title)
+export(decorate_dend)
+export(decorate_dimnames)
+export(decorate_heatmap_body)
+export(decorate_row_dend)
+export(decorate_row_names)
+export(decorate_row_title)
+export(decorate_title)
+export(densityHeatmap)
+export(dist2)
+export(enhanced_basicplot)
+export(grid.dendrogram)
+export(ht_global_opt)
+export(is_abs_unit)
+export(max_text_height)
+export(max_text_width)
 export(oncoPrint)
+export(plotDataFrame)
+export(rowAnnotation)
+export(row_anno_barplot)
+export(row_anno_boxplot)
+export(row_anno_density)
+export(row_anno_histogram)
+export(row_anno_link)
+export(row_anno_points)
+export(row_anno_text)
+export(selectArea)
+export(unify_mat_list)
 exportClasses(AdditiveUnit)
 export(AdditiveUnit)
-export(max_text_height)
-export(enhanced_basicplot)
-exportMethods(annotation_legend_size)
-exportMethods(row_order)
-export(AdditiveUnit)
-exportMethods(draw_heatmap_list)
-export(row_anno_density)
-export(is_abs_unit)
-export(dist2)
-export(decorate_heatmap_body)
-exportMethods(draw_heatmap_legend)
-exportMethods(add_heatmap)
-export(anno_barplot)
-exportMethods(row_dend)
-export(row_anno_boxplot)
-export(max_text_width)
-export(anno_link)
-exportMethods(make_layout)
-export(decorate_row_title)
-export(anno_histogram)
-export(plotDataFrame)
-exportMethods(draw_dimnames)
 exportClasses(ColorMapping)
 export(ColorMapping)
-exportClasses(HeatmapAnnotation)
-export(HeatmapAnnotation)
-export(anno_points)
-exportMethods(draw_title)
-export(ht_global_opt)
-export('+.AdditiveUnit')
-export(decorate_column_names)
-export(column_anno_barplot)
-export(densityHeatmap)
-exportMethods(heatmap_legend_size)
-exportClasses(HeatmapList)
-export(HeatmapList)
-export(column_anno_density)
 exportClasses(Heatmap)
 export(Heatmap)
-exportMethods(draw_annotation_legend)
-exportMethods(column_dend)
-exportMethods(set_component_height)
-export(row_anno_link)
-exportMethods(make_column_cluster)
+exportClasses(HeatmapAnnotation)
+export(HeatmapAnnotation)
+exportClasses(HeatmapList)
 export(HeatmapList)
-exportMethods(draw_annotation)
+exportClasses(SingleAnnotation)
 export(SingleAnnotation)
-export(row_anno_histogram)
-exportMethods(get_color_mapping_list)
-exportMethods(make_row_cluster)
+exportMethods(add_heatmap)
+exportMethods(annotation_legend_size)
+exportMethods(color_mapping_legend)
+exportMethods(column_dend)
+exportMethods(column_order)
+exportMethods(component_height)
 exportMethods(component_width)
-export(decorate_column_title)
+exportMethods(draw)
+exportMethods(draw_annotation)
+exportMethods(draw_annotation_legend)
 exportMethods(draw_dend)
+exportMethods(draw_dimnames)
+exportMethods(draw_heatmap_body)
+exportMethods(draw_heatmap_legend)
+exportMethods(draw_heatmap_list)
+exportMethods(draw_title)
+exportMethods(get_color_mapping_list)
 exportMethods(get_color_mapping_param_list)
-export(grid.dendrogram)
-export(decorate_title)
-export(decorate_dend)
-export(rowAnnotation)
-export(column_anno_link)
-export(columnAnnotation)
-export(decorate_row_names)
-export(anno_text)
-export(anno_density)
+exportMethods(heatmap_legend_size)
+exportMethods(make_column_cluster)
+exportMethods(make_layout)
+exportMethods(make_row_cluster)
+exportMethods(map_to_colors)
+exportMethods(prepare)
+exportMethods(row_dend)
+exportMethods(row_order)
+exportMethods(set_component_height)
 
+import(grDevices)
+import(graphics)
 import(grid)
-importFrom("methods", setClass)
-importFrom("methods", setMethod)
-importFrom("methods", setGeneric)
+import(stats)
+importFrom("GetoptLong", qq)
+importFrom("GetoptLong", qq.options)
+importFrom("GetoptLong", qqcat)
+importFrom("GlobalOptions", setGlobalOptions)
+importFrom("RColorBrewer", brewer.pal)
 importFrom("circlize", colorRamp2)
 importFrom("circlize", rand_color)
 importFrom("circlize", smartAlign)
-importFrom("GetoptLong", qq)
-importFrom("GetoptLong", qqcat)
-importFrom("GetoptLong", qq.options)
-importFrom("colorspace", rainbow_hcl)
 importFrom("colorspace", diverge_hcl)
-importFrom("RColorBrewer", brewer.pal)
+importFrom("colorspace", rainbow_hcl)
+importFrom("dendextend", "labels<-")
 importFrom("dendextend", get_branches_heights)
 importFrom("dendextend", nnodes)
-importFrom("dendextend", "labels<-")
-import(graphics)
-import(stats)
-import(grDevices)
-importFrom("GlobalOptions", setGlobalOptions)
+importFrom("methods", setClass)
+importFrom("methods", setGeneric)
+importFrom("methods", setMethod)
 
